@@ -10,55 +10,37 @@
 package de.rub.nds.tlsattacker.core.protocol.parser;
 
 import de.rub.nds.modifiablevariable.util.ArrayConverter;
-import de.rub.nds.tlsattacker.core.config.Config;
+import de.rub.nds.tlsattacker.core.constants.HandshakeMessageType;
 import de.rub.nds.tlsattacker.core.constants.ProtocolVersion;
 import de.rub.nds.tlsattacker.core.protocol.message.SupplementalDataMessage;
-import de.rub.nds.tlsattacker.core.layer.context.TlsContext;
-import java.io.ByteArrayInputStream;
-import java.util.Arrays;
-import java.util.Collection;
-import static org.junit.Assert.assertArrayEquals;
-import static org.junit.Assert.assertTrue;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.jupiter.api.Named;
+import org.junit.jupiter.params.provider.Arguments;
 
-@RunWith(Parameterized.class)
-public class SupplementalDataParserTest {
+import java.util.List;
+import java.util.stream.Stream;
 
-    @Parameterized.Parameters
-    public static Collection<Object[]> generateData() {
-        return Arrays.asList(new Object[][] {
-            { ArrayConverter.hexStringToByteArray("00000e4002000a0008010005aaaaaaaaaa"), 14,
-                ArrayConverter.hexStringToByteArray("4002000a0008010005aaaaaaaaaa"), ProtocolVersion.TLS11 },
-            { ArrayConverter.hexStringToByteArray("00001c4002000a0008010005aaaaaaaaaa4002000a0008010005aaaaaaaaaa"), 28,
-                ArrayConverter.hexStringToByteArray("4002000a0008010005aaaaaaaaaa4002000a0008010005aaaaaaaaaa"),
-                ProtocolVersion.TLS11 } });
+public class SupplementalDataParserTest
+    extends AbstractHandshakeMessageParserTest<SupplementalDataMessage, SupplementalDataParser> {
+
+    public SupplementalDataParserTest() {
+        super(SupplementalDataMessage.class, SupplementalDataParser::new,
+            List.of(
+                Named.of("SupplementalDataMessage::getSupplementalDataLength",
+                    SupplementalDataMessage::getSupplementalDataLength),
+                Named.of("SupplementalDataMessage::getSupplementalDataBytes",
+                    SupplementalDataMessage::getSupplementalDataBytes)));
     }
 
-    private byte[] message;
-    private int supplementalDataLength;
-    private byte[] supplementalDataBytes;
-    private ProtocolVersion version;
-    private final Config config = Config.createConfig();
-
-    public SupplementalDataParserTest(byte[] message, int supplementalDataLength, byte[] supplementalDataBytes,
-        ProtocolVersion version) {
-        this.message = message;
-        this.supplementalDataLength = supplementalDataLength;
-        this.supplementalDataBytes = supplementalDataBytes;
-        this.version = version;
+    public static Stream<Arguments> provideTestVectors() {
+        return Stream.of(
+            Arguments.of(ProtocolVersion.TLS11,
+                ArrayConverter.hexStringToByteArray("1700001100000e4002000a0008010005aaaaaaaaaa"),
+                List.of(HandshakeMessageType.SUPPLEMENTAL_DATA.getValue(), 17, 14,
+                    ArrayConverter.hexStringToByteArray("4002000a0008010005aaaaaaaaaa"))),
+            Arguments.of(ProtocolVersion.TLS11,
+                ArrayConverter
+                    .hexStringToByteArray("1700001F00001c4002000a0008010005aaaaaaaaaa4002000a0008010005aaaaaaaaaa"),
+                List.of(HandshakeMessageType.SUPPLEMENTAL_DATA.getValue(), 31, 28,
+                    ArrayConverter.hexStringToByteArray("4002000a0008010005aaaaaaaaaa4002000a0008010005aaaaaaaaaa"))));
     }
-
-    @Test
-    public void testParse() {
-        TlsContext tlsContext = new TlsContext(config);
-        tlsContext.setSelectedProtocolVersion(version);
-        SupplementalDataParser parser = new SupplementalDataParser(new ByteArrayInputStream(message), tlsContext);
-        SupplementalDataMessage suppDataMessage = new SupplementalDataMessage();
-        parser.parse(suppDataMessage);
-        assertTrue(suppDataMessage.getSupplementalDataLength().getValue() == supplementalDataLength);
-        assertArrayEquals(suppDataMessage.getSupplementalDataBytes().getValue(), supplementalDataBytes);
-    }
-
 }
