@@ -10,52 +10,30 @@
 package de.rub.nds.tlsattacker.core.protocol.parser.extension;
 
 import de.rub.nds.modifiablevariable.util.ArrayConverter;
-import de.rub.nds.tlsattacker.core.config.Config;
+import de.rub.nds.tlsattacker.core.constants.ExtensionType;
 import de.rub.nds.tlsattacker.core.protocol.message.extension.EllipticCurvesExtensionMessage;
-import de.rub.nds.tlsattacker.core.layer.context.TlsContext;
-import java.io.ByteArrayInputStream;
-import java.util.Arrays;
-import java.util.Collection;
-import static org.junit.Assert.assertArrayEquals;
-import static org.junit.Assert.assertTrue;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.jupiter.api.Named;
+import org.junit.jupiter.params.provider.Arguments;
 
-@RunWith(Parameterized.class)
-public class EllipticCurvesExtensionParserTest {
+import java.util.List;
+import java.util.stream.Stream;
 
-    @Parameterized.Parameters
-    public static Collection<Object[]> generateData() {
-        return Arrays.asList(new Object[][] {
-            { ArrayConverter.hexStringToByteArray("001a00170019001c001b0018001a0016000e000d000b000c0009000a"), 26,
-                ArrayConverter.hexStringToByteArray("00170019001c001b0018001a0016000e000d000b000c0009000a") } });
+public class EllipticCurvesExtensionParserTest
+    extends AbstractExtensionParserTest<EllipticCurvesExtensionMessage, EllipticCurvesExtensionParser> {
+
+    public EllipticCurvesExtensionParserTest() {
+        super(EllipticCurvesExtensionMessage.class, EllipticCurvesExtensionParser::new,
+            List.of(
+                Named.of("EllipticCurvesExtensionMessage::getSupportedGroupsLength",
+                    EllipticCurvesExtensionMessage::getSupportedGroupsLength),
+                Named.of("EllipticCurvesExtensionMessage::getSupportedGroups",
+                    EllipticCurvesExtensionMessage::getSupportedGroups)));
     }
 
-    private final byte[] extension;
-
-    private final int curvesLength;
-    private final byte[] curves;
-    private final Config config = Config.createConfig();
-
-    public EllipticCurvesExtensionParserTest(byte[] extension, int curvesLength, byte[] curves) {
-        this.extension = extension;
-        this.curvesLength = curvesLength;
-        this.curves = curves;
+    public static Stream<Arguments> provideTestVectors() {
+        return Stream.of(Arguments.of(
+            ArrayConverter.hexStringToByteArray("000a001c001a00170019001c001b0018001a0016000e000d000b000c0009000a"),
+            List.of(), ExtensionType.ELLIPTIC_CURVES, 28,
+            List.of(26, ArrayConverter.hexStringToByteArray("00170019001c001b0018001a0016000e000d000b000c0009000a"))));
     }
-
-    /**
-     * Test of parseExtensionMessageContent method, of class EllipticCurvesExtensionParser.
-     */
-    @Test
-    public void testParse() {
-        TlsContext tlsContext = new TlsContext(config);
-        EllipticCurvesExtensionParser parser =
-            new EllipticCurvesExtensionParser(new ByteArrayInputStream(extension), tlsContext);
-        EllipticCurvesExtensionMessage msg = new EllipticCurvesExtensionMessage();
-        parser.parse(msg);
-        assertArrayEquals(msg.getSupportedGroups().getValue(), curves);
-        assertTrue(curvesLength == msg.getSupportedGroupsLength().getValue());
-    }
-
 }
