@@ -10,52 +10,31 @@
 package de.rub.nds.tlsattacker.core.protocol.parser.extension;
 
 import de.rub.nds.modifiablevariable.util.ArrayConverter;
-import de.rub.nds.tlsattacker.core.config.Config;
 import de.rub.nds.tlsattacker.core.protocol.message.extension.UnknownExtensionMessage;
-import de.rub.nds.tlsattacker.core.layer.context.TlsContext;
-import java.io.ByteArrayInputStream;
-import java.util.Arrays;
-import java.util.Collection;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-import static org.junit.Assert.assertArrayEquals;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.jupiter.api.Named;
+import org.junit.jupiter.params.provider.Arguments;
 
-@RunWith(Parameterized.class)
-public class UnknownExtensionParserTest {
+import java.util.Collections;
+import java.util.List;
+import java.util.stream.Stream;
 
-    private static final Logger LOGGER = LogManager.getLogger();
+public class UnknownExtensionParserTest
+    extends AbstractExtensionParserTest<UnknownExtensionMessage, UnknownExtensionParser> {
 
-    @Parameterized.Parameters
-    public static Collection<Object[]> generateData() {
-        return Arrays.asList(new Object[][] { { new byte[0] }, { ArrayConverter.hexStringToByteArray("01") },
-            { ArrayConverter.hexStringToByteArray("0100") } });
+    public UnknownExtensionParserTest() {
+        super(UnknownExtensionMessage.class, UnknownExtensionParser::new,
+            List.of(Named.of("UnknownExtensionMessage::getExtensionData", UnknownExtensionMessage::getExtensionData)));
     }
 
-    private final byte[] message;
-    private final Config config = Config.createConfig();
-
-    public UnknownExtensionParserTest(byte[] message) {
-        this.message = message;
-    }
-
-    @Before
-    public void setUp() {
-    }
-
-    /**
-     * Test of parse method, of class UnknownExtensionParser.
-     */
-    @Test
-    public void testParse() {
-        TlsContext tlsContext = new TlsContext(config);
-        UnknownExtensionParser parser = new UnknownExtensionParser(new ByteArrayInputStream(message), tlsContext);
-        UnknownExtensionMessage unknownMessage = new UnknownExtensionMessage();
-        parser.parse(unknownMessage);
-        assertArrayEquals(message, unknownMessage.getExtensionData().getValue());
-
+    public static Stream<Arguments> provideTestVectors() {
+        return Stream.of(
+            Arguments.of(ArrayConverter.hexStringToByteArray("00230000"), List.of(),
+                ArrayConverter.hexStringToByteArray("0023"), 0, Collections.singletonList(new byte[0])),
+            Arguments.of(ArrayConverter.hexStringToByteArray("000f000101"), List.of(),
+                ArrayConverter.hexStringToByteArray("000f"), 1, List.of(ArrayConverter.hexStringToByteArray("01"))),
+            Arguments.of(ArrayConverter.hexStringToByteArray("00000000"), List.of(),
+                ArrayConverter.hexStringToByteArray("0000"), 0, Collections.singletonList(new byte[0])),
+            Arguments.of(ArrayConverter.hexStringToByteArray("0000FFFF"), List.of(),
+                ArrayConverter.hexStringToByteArray("0000"), 0xFFFF, Collections.singletonList(new byte[0])));
     }
 }
